# animus-link

./: .gitignore  README.md  config.example.toml  orchestrator.py  orchestrator_tray.py  pyproject.toml
docs/: animus-link.md  audio-routing.md  setup-linux-client.md  setup-windows-server.md
scripts/: install-firewall-rules.ps1  run-client.bat  run-client.ps1  run-client.sh  start-bridge-once.bat  start-bridge-once.ps1  start-launcher.bat  start-launcher.ps1
src/animus_link/: __init__.py  audio.py  bridge.py  client.py  config.py  launcher.py  protocol.py  windows_audio.py
